gobmkida/g1/get_command
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/get_command/src/interface/play_ascii.c:870:19: error: use of undeclared identifier 'unk_499BBF'
if ( memcmp( v1, &unk_499BBF, 7uLL) ) 
                  ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/get_command/src/obj/2/play_ascii.o] Error 1
